# shopify-mcp

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  shopify-mcp-wrapper.sh
landing/: index.html
src/: api.ts  index.ts  main.rs
src/tools/: analytics.ts  collections.ts  content.ts  customers.ts  fulfillments.ts  inventory.ts  marketing.ts  orders.ts  products.ts  webhooks.ts
